--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
     <div class="gallery" id="gallery">
         <h2>Love you baby gurl🎀</h2> 
-        <video src="C:\Users\HP\OneDrive\Desktop\p\IMG_1553.MOV" autoplay loop muted></video>
+        <video src="IMG_1553.MOV" autoplay loop muted></video>
 
     </div>
 
