--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
 
     function login() {
         // Define correct credentials
-        const correctEmail = "k";
-        const correctPassword = "0";
+        const correctEmail = "_kinjal.28_";
+        const correctPassword = "7039674142";
 
         // Get user input
         const emailInput = document.querySelector(".input-field[type='email']").value;
