--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="gallery" id="gallery">
         <h2>Love you baby gurl 🎀</h2> 
-        <video src="" autoplay loop muted></video>
+        <video src="IMG_1553.MOV" autoplay loop muted alt="Description" ></video>
     </div>
 
     <script>
@@ -108,8 +108,8 @@
         createBows();
 
         function login() {
-            const correctEmail = "k";
-            const correctPassword = "0";
+            const correctEmail = "_kinjal.28_";
+            const correctPassword = "7039674142";
 
             const emailInput = document.querySelector(".input-field[type='email']").value;
             const passwordInput = document.querySelector(".input-field[type='password']").value;
