--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@
         createBows();
 
         function login() {
-            const correctEmail = "_kinjal.28_";
-            const correctPassword = "7039674142";
+            const correctEmail = "fashion_queen";
+            const correctPassword = "28";
 
             const emailInput = document.querySelector(".input-field[type='email']").value;
             const passwordInput = document.querySelector(".input-field[type='password']").value;
